opam-version: "2.0"
name: "why3gospel"
synopsis: "A Why3 plug-in to read GOSPEL files"
description: "A Why3 plug-in to read GOSPEL files"
version: "0.1"
maintainer: "Jean-Christophe.Filliatre@lri.fr"
authors: [
"Jean-Christophe Filliâtre"
"Mário Pereira"
]
license: "MIT"
homepage: "https://vocal.lri.fr/"
dev-repo: "git://github.com/vocal-project/vocal"
bug-reports: "https://github.com/vocal-project/vocal/issues"
doc: "https://github.com/vocal-project/vocal/blob/master/README.md"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "dune" {>= "2.0.1"}
  "why3"
  "gospel"
  "ocaml" {>= "4.07"}
]

pin-depends: [
  [ "why3.dev" "git+https://gitlab.inria.fr/why3/why3.git#f40af3b05ee9b553e90be5a7b04d7fdf4d26f780" ]
]
