(executable
 (flags :standard -w -9-32-27 -linkall)
 (name why3gospel)
 (modes plugin)
 (libraries why3 gospel)
 (embed_in_plugin_libraries gospel))

(install
 (section lib_root)
 (files
  (why3gospel.cmxs as why3/plugins/gospel.cmxs))
 (package why3gospel))

(install
 (section share_root)
 (files
  (gospel.mlw as why3/stdlib/gospel.mlw))
 (package why3gospel))
