opam-version: "2.0"
name: "why3gospel"
synopsis: "A Why3 plug-in to read GOSPEL files"
description: "A Why3 plug-in to read GOSPEL files"
version: "0.1"
maintainer: "Jean-Christophe.Filliatre@lri.fr"
authors: [
"Jean-Christophe Filliâtre"
"Mário Pereira"
]
license: "MIT"
homepage: "https://vocal.lri.fr/"
dev-repo: "git://github.com/vocal-project/vocal"
bug-reports: "https://github.com/vocal-project/vocal/issues"
doc: "https://github.com/vocal-project/vocal/blob/master/README.md"
build: [
  [ "dune" "build" "-p" name ]
]
depends: [
  "dune"
  #"why3"
  "gospel"
  "ocaml" {>= "4.07"}
]
